--- a/src/index.css
+++ b/src/index.css
@@ -1,90 +1,58 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 22px;
+.board {
+  background-color: grey;
+  border-radius: 10%;
+  color: white;
+  min-height: 350px;
+  padding: 0 20px 20px 20px;
+  text-align: center;
+  width: 280px;
 }
 
 h2 {
-  margin-top: 0;
-  font-size: 20px;
+  padding-top: 12px;
+  margin: 8px;
 }
 
-h3 {
-  margin-top: 0;
-  font-size: 18px;
+table {
+  border-spacing: 8px;
+  margin: auto;
 }
 
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-left: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
+button {
+  background-color: #6e072d;
+  border-color: #6e6e6e;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
 }
 
-.board-row:after {
-  clear: both;
-  content: '';
-  display: table;
+.game-square {
+  font-size: 50px;
+  height: 70px;
+  vertical-align: top;
+  width: 70px;
+}
+
+.game-square:disabled {
+  cursor: default;
+}
+
+#restart-button {
+  display: none;
+  font-size: 24px;
+  margin: 12px auto;
+  padding: 12px;
 }
 
 .status {
-  margin-bottom: 10px;
-}
-.game {
-  display: flex;
-  flex-direction: row;
+  margin-bottom: 5px;
+  font-size: 20px;
 }
 
-.game-info {
-  margin-left: 20px;
+.game {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 20px;
 }
